--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Eksponerer ofte brukte funksjoner i Kartverkets SOAP Matrikkelen-API via REST",
   "main": "app.js",
   "scripts": {
-    "test": "standard && jest && npm audit",
+    "start": "node app.js",
+    "dev": "standardx && cross-env NODE_ENV=development nodemon app.js",
+    "standard": "standardx",
+    "test": "standardx && npm audit",
     "test:offline": "standard && jest",
-    "refresh": "rm -rf node_modules && rm package-lock.json && npm i",
-    "start": "func start",
-    "dev": "nodemon app.js",
-    "standard": "standard"
+    "refresh": "rm -rf node_modules && rm package-lock.json && npm i"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/karleinarb/kartverket-matrikkel-api#readme",
   "devDependencies": {
     "audit": "^0.0.6",
+    "cross-env": "^7.0.3",
     "jest": "^27.2.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
@@ -36,6 +37,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-openapi-validator": "^4.13.1",
     "node-fetch": "^2.6.4",
