--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node-fetch": "^2.6.4",
     "prettify-xml": "^1.2.0",
     "swagger-ui-express": "^4.1.6",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "yamljs": "^0.3.0"
   }
 }
