--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "xml2js": "^0.4.23",
     "yamljs": "^0.3.0"
   },
+  "standardx": {
+    "env": [ "jest" ]
+  },
   "jest": {
     "testMatch": [
       "**/test/**/*test.[jt]s?(x)",
