--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "express": "^4.17.1",
     "express-openapi-validator": "^4.13.1",
     "node-fetch": "^2.6.4",
-    "passport": "^0.5.0",
-    "passport-localapikey": "^0.0.3",
+    "passport": "^0.4.1",
+    "passport-headerapikey": "^1.2.2",
     "prettify-xml": "^1.2.0",
     "swagger-ui-express": "^4.1.6",
     "xml2js": "^0.4.23",
