--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "standardx && cross-env NODE_ENV=development nodemon app.js",
+    "debug": "cross-env NODE_ENV=development nodemon test.js",
     "standard": "standardx",
     "test": "standardx && jest",
     "refresh": "rm -rf node_modules && rm package-lock.json && npm i"
