--- a/.github/workflows/main_test-matrikkel-api.yml
+++ b/.github/workflows/main_test-matrikkel-api.yml
@@ -35,6 +35,7 @@ jobs:
       with:
         name: node-app
         path: app.tar
+        retention-days: 1
 
   deploy:
     runs-on: ubuntu-latest
