--- a/.github/workflows/main_test-matrikkel-api.yml
+++ b/.github/workflows/main_test-matrikkel-api.yml
@@ -9,6 +9,11 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  AZURE_WEBAPP_NAME: test-matrikkel-api     # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: '.'            # set this to the path to your web app project, defaults to the repository root
+  NODE_VERSION: '14.x'                      # set this to the node version to use
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,37 +32,10 @@ jobs:
         npm run build --if-present
         npm run test --if-present
 
-    - name: Tar files
-      run: tar -cvf app.tar .
-
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v2
-      with:
-        name: node-app
-        path: app.tar
-        retention-days: 1
-
   deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v2
-      with:
-        name: node-app
-
-    - name: 'Extract tar'
-      run: 'tar -xvf app.tar'
-
-    - name: 'Deploy to Azure Web App'
-      id: deploy-to-webapp
+    - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'test-matrikkel-api'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_9538be2569894c05bc45cac9fa231b7c }}
-        package: .
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
