--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -18,7 +18,7 @@
 name: Build and deploy Node.js app to Azure Web App - test-matrikkel-api
 
 on:
-  push:
+  release:
     branches:
       - main
 
