--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@
 #
 # For more information on GitHub Actions for Azure, refer to https://github.com/Azure/Actions
 # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
-name: Build and deploy Node.js app to Azure Web App - test-matrikkel-api
+name: "Test: Build and deploy Node.js app to Azure Web App"
 
 on:
   push:
