Gjøre det mulig å dispatche GA manuelt

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,7 @@ on:
   push:
     branches-ignore:
       - main
+    workflow_dispatch:
 
 env:
   AZURE_WEBAPP_NAME: test-matrikkel-api     # set this to your application's name
