--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -21,6 +21,7 @@ on:
   release:
     branches:
       - main
+    workflow_dispatch:
 
 env:
   AZURE_WEBAPP_NAME: test-matrikkel-api     # set this to your application's name
