Arbeid med å resolve typer i data før respons sendes

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,8 @@ name: "Test: Build and deploy to Azure"
 
 on:
   push:
-    branches-ignore:
-      - main
+    branches:
+      - test
     workflow_dispatch:
 
 env:
