--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "standardx": "^7.0.0"
   },
   "dependencies": {
+    "@vtfk/utilities": "^1.0.0",
     "axios": "^0.21.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -45,6 +46,7 @@
     "passport": "^0.4.1",
     "passport-headerapikey": "^1.2.2",
     "prettify-xml": "^1.2.0",
+    "sjablong": "^1.0.29",
     "swagger-ui-express": "^4.1.6",
     "xml-query": "^1.5.0",
     "xml-reader": "^2.4.3",
