--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-openapi-validator": "^4.13.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.4",
     "passport": "^0.4.1",
