--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,9 +25,9 @@ on:
     workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: test-matrikkelproxy-api  # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: '.'              # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '14.x'                        # set this to the node version to use
+  AZURE_WEBAPP_NAME: test-app-matrikkelproxy-api  # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: '.'                  # set this to the path to your web app project, defaults to the repository root
+  NODE_VERSION: '14.x'                            # set this to the node version to use
 
 jobs:
   build-and-deploy:
